<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97FF9800"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:background="#61A1A4EC"
        android:text="@string/lbl_C"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_Num"
        android:layout_width="260dp"
        android:layout_height="64dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="25dp"
        android:background="#FA000609"
        android:backgroundTint="#8100BCD4"
        android:ems="10"
        android:inputType="text"
        android:text="@string/caja_num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="25dp"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_Num" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"
        android:background="#61A1A4EC"
        android:text="@string/lbl_A"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="27dp"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#F6F3F3"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:text="@string/lbl_igual"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <EditText
        android:id="@+id/caja_Res"
        android:layout_width="242dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:background="#050000"
        android:backgroundTint="#8100BCD4"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:text="@string/caja_res"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="73dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="40dp"
        android:background="#909C27B0"
        android:backgroundTint="#FF9800"
        android:onClick="btn_calc"
        android:text="@string/btn_calc"
        android:textColor="#F8F2F0F4"
        android:textColorHighlight="#706A00FF"
        android:textColorLink="#FF9800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_Res" />
</androidx.constraintlayout.widget.ConstraintLayout>